k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adpy-deployment
  labels:
    app: adpy-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adpy-server
  template:
    metadata:
      labels:
        app: adpy-server
    spec:
      imagePullSecrets:
      - name: docker-treescale-secret
      containers:
      - name: application
        image: repo.treescale.com/sorend/adpy:VERSION
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: data-volume
            mountPath: /data
            readOnly: false
      volumes:
        - name: data-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: adpy-service
  labels:
    app: adpy-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: adpy-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: adpy-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - vvv.atmakuridavidsen.com
    secretName: vvv-atmakuridavidsen-com-tls
  rules:
  - host: vvv.atmakuridavidsen.com
    http:
      paths:
      - path: /
        backend:
          serviceName: adpy-service
          servicePort: 80
